@@ -79,6 +79,7 @@ BUILT_SOURCES = \
 lightdm_CFLAGS = \
 	$(LIGHTDM_CFLAGS) \
 	$(WARN_CFLAGS) \
+	-DLIBEXEC_DIR=\"$(libexecdir)\" \
 	-DPKGLIBEXEC_DIR=\"$(pkglibexecdir)\" \
 	-DSBIN_DIR=\"$(sbindir)\" \
 	-DCONFIG_DIR=\"$(sysconfdir)/lightdm\" \
@@ -91,6 +92,14 @@ lightdm_CFLAGS = \
 lightdm_LDADD = \
 	$(LIGHTDM_LIBS) \
 	-lpam
+
+libexec_PROGRAMS = lightdm-guest-session-wrapper
+
+lightdm_guest_session_wrapper_SOURCES = lightdm-guest-session-wrapper.c
+
+lightdm_guest_session_wrapper_CFLAGS = \
+	$(LIGHTDM_CFLAGS) \
+	$(WARN_CFLAGS)
 
 EXTRA_DIST = ldm-marshal.list \
 	display-manager.xml
