@@ -16,6 +16,9 @@ Overview of changes in lightdm 1.1.0
     * Start authentication when scrolling through GTK greeter entries
     * Link liblightdm-qt against QtGui
     * Fix liblightdm-qt crashing when face images are installed
+    * Introduce a lightdm-guest-session-wrapper session command which MAC
+      systems like AppArmor and SELinux can use for attaching a restrictive
+      policy to guest sessions.
 
 Overview of changes in lightdm 1.0.0
 
